fix footer style and posstion, Add letter spacing to h6 in footer

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -97,35 +97,30 @@ h2 {
     height:300px;
 }
 #introduction {
-    margin-top: 300px;
+    margin-top: 50px;
     text-align: center;
+    padding: 10px;
+    padding-bottom: 60px;
 }   
 
 /*footer style*/
 #footer {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-}
-
-#container {
-    position: relative;
-    width: 100%;
-    height: 100px;
+    position:absolute;
+    bottom:0;
+    width:100%;
+    height: 50px;
 }
 
 #footerimage {
-    background: url('../image/furnleaves.jpeg') no-repeat;
+    background: url('../image/furnleaves.jpeg') no-repeat center center fixed;
     background-size: cover;
-    background-position: center center;
-    height: 60px;
-    background-attachment: fixed;
+    height: 50px;
     margin: auto;
 }
 
 h6 {
     color: whitesmoke;
+    letter-spacing: 2px;
     position: absolute;
     bottom: 0;
 }
